# cicd-alembic-migrations

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: test-migrations.yaml
alembic/versions/: 15042ec21c19_create_account_table.py  75342276a34d_add_a_column.py
